hphp/hack/test/typecheck/expression_trees/dict_error.php.exp
File "dict_error.php", line 59, characters 3-11:
Invalid argument (Typing[4110])
  File "dict_error.php", line 12, characters 33-78:
  Expected `Spliceable<DictError, mixed, TInfer#1>`
  File "dict_error.php", line 58, characters 15-24:
  But got `ExampleInt`
File "dict_error.php", line 61, characters 10-14:
Typing error (Typing[4110])
  File "dict_error.php", line 61, characters 10-14:
  Expected `Spliceable<_, _, _>` because this is being spliced into another Expression Tree
  File "dict_error.php", line 58, characters 15-24:
  But got `ExampleInt`
File "dict_error.php", line 61, characters 12-13:
Invalid argument (Typing[4110])
  File "dict_error.php", line 52, characters 5-45:
  Expected `Spliceable<DictError, mixed, _>`
  File "dict_error.php", line 58, characters 15-24:
  But got `ExampleInt`
